--- a/src/main/resources/assets/app.htm
+++ b/src/main/resources/assets/app.htm
@@ -6,6 +6,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.compat.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/controllers/todoController.js"></script>
 
 </head>
 
