--- a/src/main/resources/assets/app.htm
+++ b/src/main/resources/assets/app.htm
@@ -2,9 +2,12 @@
 <html>
 <head>
     <title>Angular</title>
+
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.compat.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-resource.js"></script>
+
     <script src="js/app.js"></script>
     <script src="js/controllers/todoController.js"></script>
 
