--- a/src/test/javaScript/index.htm
+++ b/src/test/javaScript/index.htm
@@ -4,12 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Jasmine Spec Runner v2.0.2</title>
 
-    <link rel="shortcut icon" type="image/png" href="/test/lib/jasmine-2.0.2/jasmine_favicon.png">
-    <link rel="stylesheet" type="text/css" href="/test/lib/jasmine-2.0.2/jasmine.css">
+    <link rel="shortcut icon" type="image/png" href="/lib/jasmine-2.0.2/jasmine_favicon.png">
+    <link rel="stylesheet" type="text/css" href="/lib/jasmine-2.0.2/jasmine.css">
 
-    <script type="text/javascript" src="/test/lib/jasmine-2.0.2/jasmine.js"></script>
-    <script type="text/javascript" src="/test/lib/jasmine-2.0.2/jasmine-html.js"></script>
-    <script type="text/javascript" src="/test/lib/jasmine-2.0.2/boot.js"></script>
+    <script type="text/javascript" src="/lib/jasmine-2.0.2/jasmine.js"></script>
+    <script type="text/javascript" src="/lib/jasmine-2.0.2/jasmine-html.js"></script>
+    <script type="text/javascript" src="/lib/jasmine-2.0.2/boot.js"></script>
 
     <!-- library files here... -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.js"></script>
@@ -19,11 +19,12 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-resource.js"></script>
 
     <!-- source files here... -->
-    <script type="text/javascript" src="/test/all.js"></script>
+    @source@
+
+    <!--<script type="text/javascript" src="/all.js"></script>-->
 
     <!-- spec files here... -->
-    <script type="text/javascript" src="/test/spec/controllers/todoControllerSpec.js"></script>
-    <script type="text/javascript" src="/test/spec/resources/todoResourceSpec.js"></script>
+    @specs@
 
 </head>
 
