Cleanup and work on edit directive

--- a/src/main/resources/assets/app.htm
+++ b/src/main/resources/assets/app.htm
@@ -22,6 +22,7 @@
 
     <script src="js/app.js"></script>
     <script src="js/controllers/todoController.js"></script>
+    <script src="js/directives/edit.js"></script>
     <script src="js/resources/todoResource.js"></script>
 
 </head>
@@ -35,6 +36,7 @@
         </div>
     </div>
 </nav>
+
 <div class="container">
     <ng-view/>
 </div>
