--- a/src/main/resources/assets/app.htm
+++ b/src/main/resources/assets/app.htm
@@ -22,6 +22,7 @@
 
     <script src="js/app.js"></script>
     <script src="js/controllers/todoController.js"></script>
+    <script src="js/controllers/loginController.js"></script>
     <script src="js/directives/edit.js"></script>
     <script src="js/resources/todoResource.js"></script>
 
@@ -32,7 +33,7 @@
 <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Todo App</a>
+            <a class="navbar-brand" href="/">Todo App</a>
         </div>
     </div>
 </nav>
