--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-hello
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url=dropwizard.html" />
+</head>
+<body>
+</body>
+</html>
